updating readme with install foo

--- a/README.org
+++ b/README.org
@@ -5,19 +5,52 @@
   :CUSTOM_ID: smp_audio
   :END:
 
-Slurp comes from /smp_audioing/ in music data and creating an incremental
-model based representation of the audio. This can be then be used for
-support or automation of different audio editing and production tasks
-such as segmentation, editing, score reconstruction, etc.
+A playground for designing audio tools, /smp_audio/ is part of the smp
+project, a set of conventions about sensorimotor learning and
+developmental models used in robotics research. Auditory perception is
+an important function for robots, but there are clear
+side-effects. For example, the modules a robot needs to "hear" things,
+can used to build audio- and music tools for consumers and pros with
+novel properties. That is the idea, that this project tries to validate.
 
-The library wraps several different existing MIR libraries, currently
-essentia, librosa, madmom, aubio, pyAudioAnalysis.
+# Create an incremental model based
+# representation of the audio. This can be then be used for support or
+# automation of different audio editing and production tasks such as
+# segmentation, editing, score reconstruction, etc.
+
+The smp approach is shaped by rapid-prototyping and functional
+proofing. Optimization issues are defered entirely to later stages,
+generally assuming them possible-if-justified. The approach is
+fundamentally graphical and only informally defined beyond this
+fact. Algorithms and processing flows are modelled as graphs whose
+nodes comprise function calls on impinging data. This project consists
+of a set of library functions in the `smp_audio` directory, and
+experimental processing flows in the `scripts` directory, making use
+of library calls to build apps and usage examples.
+
+Within smp, third party libraries are liberally used to realize the
+/rapid/ aspect, at the cost of stability and ease of installation. The
+library wraps different MIR functions from several existing
+implementations, currently essentia, librosa, madmom, aubio,
+pyAudioAnalysis. These wrappers are complemented with additional glue
+and integration functions.
 
 ** Install
 
+Part one of the dependency pile is just the usual Python scientific computing
+stack and can usually be installed as distribution packages.
+
 On Linux / Ubuntu
 
-: sudo pip3 install -r requirements-simple.txt essentia librosa madmon aubio pyAudioAnalysis
+: sudo apt install python3-numpy python3-scipy python3-matplotlib python3-pandas python3-sklearn
+
+or just using pip
+
+: sudo pip3 install numpy scipy matplotlib pandas sklearn
+
+Part two is the audio and MIR specific packages, which I install with pip directly 
+
+: sudo pip3 install -r requirements-simple.txt essentia librosa madmom aubio pyAudioAnalysis
 
 On Mac OSX
 
@@ -25,9 +58,16 @@ Install essentia with their homebrew formula
 https://github.com/MTG/homebrew-essentia,
 https://essentia.upf.edu/documentation/installing.html
 
-Otherwise
+Then followed by
 
 : sudo pip3 install -r requirements-simple.txt librosa madmon aubio pyAudioAnalysis
+
+
+To finish, add the module path to your PYTHONPATH by running
+
+: export PYTHONPATH=/path/to/cloned/smp_audio:$PYTHONPATH
+
+In case you come back, this can be added to your shell profile.
 
 ** Modules and workflows
    :PROPERTIES:
