update README w/ notes on thumbnailing, stream processing

--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+OPTIONS: ^:nil
 
-* smp_audio aka smp_audio
+* smp_audio
   :PROPERTIES:
   :CUSTOM_ID: smp_audio
   :END:
@@ -11,7 +11,8 @@ developmental models used in robotics research. Auditory perception is
 an important function for robots, but there are clear
 side-effects. For example, the modules a robot needs to "hear" things,
 can used to build audio- and music tools for consumers and pros with
-novel properties. That is the idea, that this project tries to validate.
+novel properties. That is the idea, that this project tries to
+validate.
 
 # Create an incremental model based
 # representation of the audio. This can be then be used for support or
@@ -172,3 +173,17 @@ os.environ['LIBROSA_CACHE_DIR'] = '/tmp/librosa_cache'
 import librosa
 #+END_EXAMPLE
 python3 scripts/aubio_cut.py --mode scan --quiet --bufsize 2048 --hopsize 256 /home/lib/audio/work/tsx_recur_5/sco-base.wav
+** Notes
+
+*** TODO thumbnailing
+
+provided by pyAudioAnalysis, running
+
+: python3 audioAnalysis.py thumbnail --input /path/to/file.wav
+
+produces a thumbnail image and two thumbnail wav snippets in /path/to/file_thumbnail*
+
+*** TODO stream processing
+
+switch the entire internal data flow to stream based processing and
+implement batch versions as a separate option.
