--- a/README.org
+++ b/README.org
@@ -5,41 +5,38 @@
   :CUSTOM_ID: smp_audio
   :END:
 
-A playground for designing audio tools, /smp_audio/ is part of the smp
-project, a set of conventions about sensorimotor learning and
-developmental models used in robotics research. Auditory perception is
-an important function for robots, but there are clear
-side-effects. For example, the modules a robot needs to "hear" things,
-can used to build audio- and music tools for consumers and pros with
-novel properties. That is the idea, that this project tries to
-validate.
+The audio tooling playground within the *sensorimotor primitives*
+(smp) family of packages [fn:1]. They come out of a sensorimotor
+approach to learning and development on robots.
 
-# Create an incremental model based
-# representation of the audio. This can be then be used for support or
-# automation of different audio editing and production tasks such as
-# segmentation, editing, score reconstruction, etc.
+Auditory perception is an extremely important modality that has not
+seen the attention it deserves in robotics. There is a large overlap
+in modeling robot perception and computer music processes. smp_audio
+is a collection of batch algorithms for audio processing tasks based
+on techniques pulled from MIR and machine listening.
 
-The smp approach is shaped by rapid-prototyping and functional
-proofing. Optimization issues are defered entirely to later stages,
-generally assuming them possible-if-justified. The approach is
-fundamentally graphical and only informally defined beyond this
-fact. Algorithms and processing flows are modelled as graphs whose
-nodes comprise function calls on impinging data. This project consists
-of a set of library functions in the `smp_audio` directory, and
-experimental processing flows in the `scripts` directory, making use
-of library calls to build apps and usage examples.
+This is research code and was created on a functional proofing mindset
+bent to radically rapid prototyping. Processing flows are modeled
+graphically where nodes comprise function calls on impinging
+data. There exist several versions of the graphical language strewn
+across different smp projects with different levels of language
+rigor. Still WIP, but hey.
 
-Within smp, third party libraries are liberally used to realize the
-/rapid/ aspect, at the cost of stability and ease of installation. The
-library wraps different MIR functions from several existing
-implementations, currently essentia, librosa, madmom, aubio,
-pyAudioAnalysis. These wrappers are complemented with additional glue
-and integration functions.
+This means we are using third party libraries without limit in the
+project, which is easy working from within a well used Python
+environment [fn:2]. smp_audio is wrapping around a number of
+established audio processing libraries: aubio, essentia, librosa,
+pyAudioAnalysis, madmom, and a few more specialized ones. These are
+all well maintained and generally easy to install.
+
+The `smp_audio` directory contains the wrapping code and glue to
+provide the underlying API to the processing flows defined in the
+files in the `scripts` directory.
 
 ** Install
 
-Part one of the dependency pile is just the usual Python scientific computing
-stack and can usually be installed as distribution packages.
+Part one of the dependency pile is just the usual Python scientific
+computing stack and can usually be installed as distribution packages.
 
 On Linux / Ubuntu
 
@@ -49,7 +46,7 @@ or just using pip
 
 : sudo pip3 install numpy scipy matplotlib pandas sklearn
 
-Part two is the audio and MIR specific packages, which I install with pip directly 
+Part two is the audio and MIR specific packages, which I install using pip directly 
 
 : sudo pip3 install -r requirements.txt essentia librosa madmom aubio pyAudioAnalysis
 
@@ -67,7 +64,8 @@ To finish, add the module path to your PYTHONPATH by running
 
 : export PYTHONPATH=/path/to/cloned/smp_audio:$PYTHONPATH
 
-In case you come back, this can be added to your shell profile.
+In case you come back to using the package, the export line above can
+be added to your login profile (~/.bashrc or similar).
 
 ** Quick start
 
@@ -105,75 +103,77 @@ argument.
 TODO: Consolidation of randomly disparate functionality is
 work-in-progress.
 
-** Modules and workflows
+** Workflows
    :PROPERTIES:
    :CUSTOM_ID: modules
    :END:
 
-The scripts folder contains prototypes for different music related
-workflows, e.g. automixing (quantitative measure based playlist
-sequencing), or autoedit (beat-tracking and segmentation based
-automatic editing and arrangement to duration of choice from raw audio
-session that is shorter or longer than output duration).
+The scripts folder contains several workflows. Those that work are the
+in ~audio_sort_features.py~ file that you can run and which has a help
+to tell you how to call it.
 
-| *tag*            |                                            | desc                                                                                  |
-|------------------+--------------------------------------------+---------------------------------------------------------------------------------------|
-| *scripts*        |                                            | smp_audio scripts                                                                     |
-| *tools*          |                                            | additional tools to support larger scopes and additional processing steps             |
-| silence-splitter |                                            | split a large audio file (> 1h) into smaller parts (e.g. 10') based on silence        |
-|                  |                                            | detection                                                                             |
-|                  | sox                                        | silence plugin command line                                                           |
-|                  |                                            | : sox -V3 audiofile.wav audiofile_part_.wav silence -l  0   1 2.0 0.1%                |
-|                  | aubio quiet                                | aubio quiet - analyze audio and print timestamps w/ onsets of silence and noise parts |
-|                  |                                            | needs to be converted to input for a slicer or aubiocut                               |
-|                  |                                            | : aubio quiet filename.wav                                                            |
-|                  | aubio cut                                  | aubiocut cuts audio at every onset incl. option for beat alignment                    |
-|                  |                                            |                                                                                       |
-| downloaders      |                                            |                                                                                       |
-|                  | soundscrape                                | soundcloud and bandcamp downloader                                                    |
-|                  |                                            | https://github.com/Miserlou/SoundScrape                                               |
-|                  |                                            | : sudo pip3 install SoundScrape                                                       |
-|                  | youtube-dl                                 | versatile youtube downloader                                                          |
-|                  |                                            |                                                                                       |
-| OBSOLETE         |                                            |                                                                                       |
-|                  | playground/music\_beats.py                 | stub                                                                                  |
-|                  | playground/music\_features\_print\_list.py |                                                                                       |
-|                  | playground/music\_features.py              | collection of different sound parsing experiments                                     |
-|                  | librosa-onset-detect-1.py                  |                                                                                       |
-|                  | librosa-onset-onset\_detect-1.py           | final version using librosa/madmon/essentia for beat tracking and segmentation        |
-|                  | librosa-onset-onset\_strength-1.py         |                                                                                       |
-|                  | librosa-onset-onset\_strength\_multi-1.py  |                                                                                       |
-|                  |                                            |                                                                                       |
-|------------------+--------------------------------------------+---------------------------------------------------------------------------------------|
-|                  | moved all files to start with music_\*     |                                                                                       |
-|                  | copied all files to smp_audio/scripts      |                                                                                       |
+*autoedit* (beat-tracking and segmentation based automatic editing and
+arrangement to duration of choice from raw audio session that is
+shorter or longer than output duration).
 
-** Process prototype
- - read file
- - apply iterative analyses to dynamically build graph of music data
+*autofeatures*, load file and return a set of features computed for
+this file.
 
-*** Caching
+*autocover*, get autofeatures and map the feature values to an image
+generation process to create a hi-res square graphics file that can be
+used as a cover image for music on the internet, or whatever.
 
-Using dict of functions and joblib.Memory to cache all compute
-intensive funtions. This is done at the calling level.
+*automaster*, is wrapping the grandiose matchering library. matchering
+transforms your target file according to the mastering signature
+extracted from the reference file.
 
-Librosa has its own caching mechanism, which is used in the librosa
-specific code.
+WIP *autovoice*
 
-: LIBROSA_CACHE_DIR
+WIP *automix* (quantitative measure based playlist sequencing)
 
-#+BEGIN_EXAMPLE shell
-$ export LIBROSA_CACHE_DIR=/tmp/librosa_cache
-$ ipython
-#+END_EXAMPLE
 
-#+BEGIN_EXAMPLE python
-import os
-os.environ['LIBROSA_CACHE_DIR'] = '/tmp/librosa_cache'
-import librosa
-#+END_EXAMPLE
-python3 scripts/aubio_cut.py --mode scan --quiet --bufsize 2048 --hopsize 256 /home/lib/audio/work/tsx_recur_5/sco-base.wav
+*** slicing audio
+
+Depending on your resources, it is often convenient to split very long
+files into shorter parts of maybe an hour length.
+
+sox command line w/ silence plugin
+
+: sox -V3 audiofile.wav audiofile_part_.wav silence -l  0 1 2.0 0.1%
+
+aubio quiet
+
+analyze audio and print the onset timestamps of silence and noise parts
+
+: aubio quiet filename.wav
+
+aubio cut
+
+aubiocut analyzes audio for different onset functions and can
+optionally cut the file at each onset and save into a separate file
+each.
+
+*** downloading audio
+
+*youtube-dl*, versatile youtube downloader, one of the best and nicest
+computer programs in the world.
+
+*ffmpeg*, another indispensable and super versatile tool for working
+with audio, media, streams, and containers. it can do everything.
+
+*soundscrape*, soundcloud and bandcamp downloader, similar to
+youtube-dl but more narrow in scope and maybe less well maintained
+recently [fn:3]
+
+: sudo pip3 install SoundScrape
+
 ** Notes
+*** 2021-01-08 refactor api
+
+refactoring for api integration
+
+python3 /home/src/QK/smp_audio/scripts/audio_sort_features.py automaster --bitdepth 24 --filenames data/GuitarRiff2_50bpm-autoedit-10.wav --references ../../../nextcloud/gt/work/automaster/refs/rae-sremmurd-notype.wav
+
 *** TODO thumbnailing
 
 provided by pyAudioAnalysis, running
@@ -186,3 +186,33 @@ produces a thumbnail image and two thumbnail wav snippets in /path/to/file_thumb
 
 switch the entire internal data flow to stream based processing and
 implement batch versions as a separate option.
+
+*** Caching
+
+ Using dict of functions and joblib.Memory to cache all compute
+ intensive funtions. This is done at the calling level.
+
+ Librosa has its own caching mechanism, which is used in the librosa
+ specific code.
+
+ : LIBROSA_CACHE_DIR
+
+ #+BEGIN_EXAMPLE shell
+ $ export LIBROSA_CACHE_DIR=/tmp/librosa_cache
+ $ ipython
+ #+END_EXAMPLE
+
+ #+BEGIN_EXAMPLE python
+ import os
+ os.environ['LIBROSA_CACHE_DIR'] = '/tmp/librosa_cache'
+ import librosa
+ #+END_EXAMPLE
+ python3 scripts/aubio_cut.py --mode scan --quiet --bufsize 2048 --hopsize 256 /home/lib/audio/work/tsx_recur_5/sco-base.wav
+
+* footnotes
+
+[fn:3] https://github.com/Miserlou/SoundScrape
+
+[fn:2] The price is that it's a pain to install. My strategy is to not install all the requirements but run the script i want to run, and fix out the issues one by one until free.
+
+[fn:1] citation needed
